# test-uv

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md  setup.md
modules/: index.html
search/: search_index.json
setup/: index.html
src/: main.py  train.py  utils.py
src/code/: inference.py  requirements.txt  train.py  utils.py
src/script/: deploy.py
test_uv/: foo.py
tests/: test_foo.py
